feat: support direct Jira Cloud polling (#1)
* feat: support direct jira cloud polling

* test: add linux visual baselines

* test: refresh linux automation baseline

* fix: stabilize agent pack export ordering

* test: refresh linux automation panel baseline